--- a/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-table/tool-request-table.component.html
+++ b/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-table/tool-request-table.component.html
@@ -1,73 +1,123 @@
+<ng-container *ngIf="newToolRequestsList$|async as toolRequests">
+  <ion-menu-toggle menu="tool-request-menu">
+    <ion-button>Click to open the menu</ion-button>
+  </ion-menu-toggle>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="6">
+        <ion-button (click)="nextClick()" expand="block" fill="clear" shape="round">
+          next
+        </ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row appHeaderRow>
+      <ion-col size="2">ID</ion-col>
+      <ion-col size="2">Statut</ion-col>
+      <ion-col size="2">Outillage</ion-col>
+      <ion-col size="2">Date de la demande</ion-col>
+      <ion-col size="2">Demandeur</ion-col>
+      <ion-col size="2">Date de besoin</ion-col>
+    </ion-row>
+    <ion-row appDataRow *ngFor="let request of toolRequests" (click)="openRequestClick(request)">
+      <ion-col size="2">{{request.id}}</ion-col>
+      <ion-col size="2">{{ request.statut }}</ion-col>
+      <ion-col size="2">
+        <ion-label *ngIf="request.controle">OT{{request.controle.outillage.sapToolNumber}} -
+          {{request.controle.outillage.designation}}</ion-label>
+        <ion-label *ngIf="request.maintenance">OT{{request.maintenance.outillage.sapToolNumber}} -
+          {{request.maintenance.outillage.designation}}</ion-label>
+      </ion-col>
+      <ion-col size="2"> {{request.createdAt | date :"EE dd MMM yyyy":"local" }}</ion-col>
+      <ion-col size="2" (click)="userClick()">
+        <ion-label *ngIf="request.controle">{{request.controle.demandeur.username}}</ion-label>
+        <ion-label *ngIf="request.maintenance">{{request.maintenance.demandeur.username}}</ion-label>
+      </ion-col>
+      <ion-col size="2">
+        <ion-label *ngIf="request.controle"> {{request.controle.dateBesoin| date :"dd MMMM yyyy":"local"}}</ion-label>
+        <ion-label *ngIf="request.maintenance"> {{request.maintenance.dateBesoin| date :"dd MMMM yyyy":"local"}}
+        </ion-label>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ng-container>
+
+
+
+
+
+
+
+<!-- 
 <table mat-table #table [dataSource]="toolRequestsDataSource$ | async" class="mat-elevation-z8" fixedLayout=true
-  matSort>
+  matSort> -->
 
-  <!-- ********* ****** ********* -->
-  <!-- ********* STATUT ********* -->
-  <!-- ********* ****** ********* -->
-  <ng-container matColumnDef="statut">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      Statut
-    </th>
-    <td [style.border-left]="getBorder(request)" mat-cell *matCellDef="let request">
-      {{ request.statut }}</td>
-  </ng-container>
-
-
-  <!-- ********* ****** ********* -->
-  <!-- ********* Numéro DEMANDE ********* -->
-  <!-- ********* ****** ********* -->
-  <ng-container matColumnDef="id">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef>
-      Numéro
-    </th>
-    <td mat-cell *matCellDef="let request">
-      {{request.id}}
-    </td>
-  </ng-container>
-
-  <!-- ********* ****** ********* -->
-  <!-- ********* OUTILLAGE ********* -->
-  <!-- ********* ****** ********* -->
-  <ng-container matColumnDef="tool">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      Outillage
-    </th>
-    <td mat-cell *matCellDef="let request">
-      <ion-label *ngIf="request.controle">OT{{request.controle.outillage.sapToolNumber}} -
-        {{request.controle.outillage.designation}}</ion-label>
-      <ion-label *ngIf="request.maintenance">OT{{request.maintenance.outillage.sapToolNumber}} -
-        {{request.maintenance.outillage.designation}}</ion-label>
-    </td>
-  </ng-container>
+<!-- ********* ****** ********* -->
+<!-- ********* STATUT ********* -->
+<!-- ********* ****** ********* -->
+<ng-container matColumnDef="statut">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+    Statut
+  </th>
+  <td [style.border-left]="getBorder(request)" mat-cell *matCellDef="let request">
+    {{ request.statut }}</td>
+</ng-container>
 
 
-  <!-- ********* ******** ******** -->
-  <!-- **** DATE DE CRETATION **** -->
-  <!-- ********* ******* ********* -->
-  <ng-container matColumnDef="createdAt">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      Date demande
-    </th>
-    <td mat-cell *matCellDef="let request">
-      {{request.createdAt | date :"EE dd MMM yyyy":"local" }}
-    </td>
-  </ng-container>
+<!-- ********* ****** ********* -->
+<!-- ********* Numéro DEMANDE ********* -->
+<!-- ********* ****** ********* -->
+<ng-container matColumnDef="id">
+  <th mat-header-cell mat-sort-header *matHeaderCellDef>
+    Numéro
+  </th>
+  <td mat-cell *matCellDef="let request">
+    {{request.id}}
+  </td>
+</ng-container>
+
+<!-- ********* ****** ********* -->
+<!-- ********* OUTILLAGE ********* -->
+<!-- ********* ****** ********* -->
+<ng-container matColumnDef="tool">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+    Outillage
+  </th>
+  <td mat-cell *matCellDef="let request">
+    <ion-label *ngIf="request.controle">OT{{request.controle.outillage.sapToolNumber}} -
+      {{request.controle.outillage.designation}}</ion-label>
+    <ion-label *ngIf="request.maintenance">OT{{request.maintenance.outillage.sapToolNumber}} -
+      {{request.maintenance.outillage.designation}}</ion-label>
+  </td>
+</ng-container>
 
 
-  <!-- ********* ****** ********* -->
-  <!-- ********* DEMANDEUR ********* -->
-  <!-- ********* ****** ********* -->
-  <ng-container matColumnDef="userCreat">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      Demandeur
-    </th>
-    <td mat-cell *matCellDef="let request" (click)="userClick()">
-      <ion-label *ngIf="request.controle">{{request.controle.demandeur.username}}</ion-label>
-      <ion-label *ngIf="request.maintenance">{{request.maintenance.demandeur.username}}</ion-label>
-    </td>
-  </ng-container>
-  <!-- TODO a supprimer -->
-  <!-- <ng-container matColumnDef="groupAffectation">
+<!-- ********* ******** ******** -->
+<!-- **** DATE DE CRETATION **** -->
+<!-- ********* ******* ********* -->
+<ng-container matColumnDef="createdAt">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+    Date demande
+  </th>
+  <td mat-cell *matCellDef="let request">
+    {{request.createdAt | date :"EE dd MMM yyyy":"local" }}
+  </td>
+</ng-container>
+
+
+<!-- ********* ****** ********* -->
+<!-- ********* DEMANDEUR ********* -->
+<!-- ********* ****** ********* -->
+<ng-container matColumnDef="userCreat">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+    Demandeur
+  </th>
+  <td mat-cell *matCellDef="let request" (click)="userClick()">
+    <ion-label *ngIf="request.controle">{{request.controle.demandeur.username}}</ion-label>
+    <ion-label *ngIf="request.maintenance">{{request.maintenance.demandeur.username}}</ion-label>
+  </td>
+</ng-container>
+<!-- TODO a supprimer -->
+<!-- <ng-container matColumnDef="groupAffectation">
             <th mat-header-cell *matHeaderCellDef>
                 Affectation
             </th>
@@ -77,42 +127,42 @@
         </ng-container> -->
 
 
-  <!-- ********* ****** ********* -->
-  <!-- ********* DATE BESOIN ********* -->
-  <!-- ********* ****** ********* -->
-  <ng-container matColumnDef="needDate">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-      Date Besoin
-    </th>
-    <td mat-cell *matCellDef="let request">
-      <ion-label *ngIf="request.controle"> {{request.controle.dateBesoin| date :"dd MMMM yyyy":"local"}}</ion-label>
-      <ion-label *ngIf="request.maintenance"> {{request.maintenance.dateBesoin| date :"dd MMMM yyyy":"local"}}
-      </ion-label>
-    </td>
-  </ng-container>
+<!-- ********* ****** ********* -->
+<!-- ********* DATE BESOIN ********* -->
+<!-- ********* ****** ********* -->
+<ng-container matColumnDef="needDate">
+  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+    Date Besoin
+  </th>
+  <td mat-cell *matCellDef="let request">
+    <ion-label *ngIf="request.controle"> {{request.controle.dateBesoin| date :"dd MMMM yyyy":"local"}}</ion-label>
+    <ion-label *ngIf="request.maintenance"> {{request.maintenance.dateBesoin| date :"dd MMMM yyyy":"local"}}
+    </ion-label>
+  </td>
+</ng-container>
 
 
-  <!-- ********* ****** ********* -->
-  <!-- ********* BOUTONS ********* -->
-  <!-- ********* ****** ********* -->
-  <ng-container matColumnDef="buttons">
-    <th mat-header-cell *matHeaderCellDef>
+<!-- ********* ****** ********* -->
+<!-- ********* BOUTONS ********* -->
+<!-- ********* ****** ********* -->
+<ng-container matColumnDef="buttons">
+  <th mat-header-cell *matHeaderCellDef>
 
-    </th>
-    <td mat-cell *matCellDef="let request">
-      <ion-button size=small *ngIf="request.controle" (click)="openControlClick(request)">
-        Ouvrir
-      </ion-button>
-      <ion-button size=small *ngIf="request.maintenance" (click)="openMaintenanceClick(request)">
-        Ouvrir
-      </ion-button>
-      <ion-button size=small *ngIf="isAdmin" (click)="removeRequestClick(request)">
-        <ion-icon slot="end" name="trash-outline"></ion-icon>
-        Delete
-      </ion-button>
-    </td>
-  </ng-container>
-  <tr mat-header-row *matHeaderRowDef="displayedRequestColumns ;sticky: true"></tr>
+  </th>
+  <td mat-cell *matCellDef="let request">
+    <ion-button size=small *ngIf="request.controle" (click)="openControlClick(request)">
+      Ouvrir
+    </ion-button>
+    <ion-button size=small *ngIf="request.maintenance" (click)="openMaintenanceClick(request)">
+      Ouvrir
+    </ion-button>
+    <ion-button size=small *ngIf="isAdmin" (click)="removeRequestClick(request)">
+      <ion-icon slot="end" name="trash-outline"></ion-icon>
+      Delete
+    </ion-button>
+  </td>
+</ng-container>
+<!-- <tr mat-header-row *matHeaderRowDef="displayedRequestColumns ;sticky: true"></tr>
   <tr mat-row *matRowDef="let request; columns: displayedRequestColumns"
     [@openClose]=" (request.statut==='EN COURS DE REALISATION') ? 'open' : ''"></tr>
-</table>
+</table> -->
