--- a/src/app/core/admin/pages/admin-user/admin-user.page.html
+++ b/src/app/core/admin/pages/admin-user/admin-user.page.html
@@ -1,20 +1,23 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color=dark>
     <ion-title>Administration des utilisateurs</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content color=light>
-  <ion-grid false>
+  <ion-grid [fixed]="false" class="ion-no-padding">
     <ion-row>
-      <ion-col size="8">
+      <ion-col size="6">
         <ion-card>
-          <ion-card-content class="table-card-content">
+          <ion-card-header>
+            <ion-card-subtitle>Tableau des utilisateurs</ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content>
             <app-admin-user-table></app-admin-user-table>
           </ion-card-content>
         </ion-card>
       </ion-col>
-      <ion-col size="4">
+      <ion-col size="6">
         <ion-card>
           <ion-card-header>
             <ion-card-title>Tableau de bord</ion-card-title>
