--- a/src/app/tooling/components/tool-requests/tool-requests.page.html
+++ b/src/app/tooling/components/tool-requests/tool-requests.page.html
@@ -9,9 +9,9 @@
 
 </ion-header>
 <ion-content [fullscreen]="false" id="tool-request-content">
-  <ng-container *ngIf="toolRequests$ | async as toolRequests">
+  <!-- <ng-container *ngIf="toolRequests$ | async as toolRequests">
     <app-table [datas]="toolRequests"></app-table>
-  </ng-container>
+  </ng-container> -->
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col size="2">
