--- a/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-table/tool-request-table.component.html
+++ b/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-table/tool-request-table.component.html
@@ -2,7 +2,7 @@
   <ion-menu-toggle menu="tool-request-menu">
     <ion-button>Click to open the menu</ion-button>
   </ion-menu-toggle>
-  <ion-grid [fixed=false]>
+  <ion-grid [fixed]="false" class="">
     <ion-row>
       <ion-col size="2">
         <ion-button (click)="nextClick()" expand="block" fill="clear" shape="round">
@@ -11,28 +11,28 @@
       </ion-col>
     </ion-row>
     <ion-row appHeaderRow>
-      <ion-col size="2">ID</ion-col>
+      <ion-col size="1">ID</ion-col>
       <ion-col size="2">Statut</ion-col>
-      <ion-col size="2">Outillage</ion-col>
-      <ion-col size="2">Date de la demande</ion-col>
-      <ion-col size="2">Demandeur</ion-col>
-      <ion-col size="2" sort="">Date de besoin</ion-col>
+      <ion-col size="6">Outillage</ion-col>
+      <ion-col size="3">Date de la demande</ion-col>
+      <ion-col size="3">Demandeur</ion-col>
+      <ion-col size="3" sort="">Date de besoin</ion-col>
     </ion-row>
     <ion-row appDataRow *ngFor="let request of toolRequests" (click)="openRequestClick(request)">
-      <ion-col size="2" [style.border-left]="getBorder(request)">{{request.id}}</ion-col>
+      <ion-col size="1" [style.border-left]="getBorder(request)">{{request.id}}</ion-col>
       <ion-col size="2">{{ request.statut }}</ion-col>
-      <ion-col size="2">
+      <ion-col size="6">
         <ion-label *ngIf="request.controle">OT{{request.controle.outillage.sapToolNumber}} -
           {{request.controle.outillage.designation}}</ion-label>
         <ion-label *ngIf="request.maintenance">OT{{request.maintenance.outillage.sapToolNumber}} -
           {{request.maintenance.outillage.designation}}</ion-label>
       </ion-col>
-      <ion-col size="2"> {{request.createdAt | date :"EE dd MMM yyyy":"local" }}</ion-col>
-      <ion-col size="2" (click)="userClick()">
+      <ion-col size="3"> {{request.createdAt | date :"EE dd MMM yyyy":"local" }}</ion-col>
+      <ion-col size="3" (click)="userClick()">
         <ion-label *ngIf="request.controle">{{request.controle.demandeur.username}}</ion-label>
         <ion-label *ngIf="request.maintenance">{{request.maintenance.demandeur.username}}</ion-label>
       </ion-col>
-      <ion-col size="2">
+      <ion-col size="3">
         <ion-label *ngIf="request.controle"> {{request.controle.dateBesoin| date :"dd MMMM yyyy":"local"}}</ion-label>
         <ion-label *ngIf="request.maintenance"> {{request.maintenance.dateBesoin| date :"dd MMMM yyyy":"local"}}
         </ion-label>
