--- a/src/app/tooling/components/tool-request-footer/tool-request-footer.component.html
+++ b/src/app/tooling/components/tool-request-footer/tool-request-footer.component.html
@@ -2,7 +2,8 @@
     <ion-item *ngIf="canManage">
         <ion-label>Affecter</ion-label>
         <ion-select multiple="true" placeholder="Séléctionner une personne" (ionChange)="affectationChange($event)">
-            <ion-select-option *ngFor="let affectationGroup of affectationGroups" [value]="affectationGroup">{{affectationGroup.libelle}}</ion-select-option>
+            <ion-select-option *ngFor="let affectationGroup of affectationGroups" [value]="affectationGroup">
+                {{affectationGroup.libelle}}</ion-select-option>
         </ion-select>
     </ion-item>
     <ion-item *ngIf="canManage">
@@ -22,11 +23,11 @@
         <ion-icon slot="end" name="document-attach-outline"></ion-icon>
         Exporter pdf
     </ion-button>
-    <ion-button slot=end block color="success" *ngIf="!canUpdate" [disabled]="form.invalid" (click)="submitClick()">
+    <ion-button slot=end block color="success" *ngIf="!canUpdate" (click)="submitClick()">
         <ion-icon slot="end" name="send-outline"></ion-icon>
         Envoyer
     </ion-button>
-    <ion-button slot=end block color="success" *ngIf="canUpdate" [disabled]="form.invalid" (click)="updateClick()">
+    <ion-button slot=end block color="success" *ngIf="canUpdate" (click)="updateClick()">
         <ion-icon slot="end" name="send-outline"></ion-icon>
         Mettre à jour
     </ion-button>
