--- a/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-table/tool-request-table.component.html
+++ b/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-table/tool-request-table.component.html
@@ -4,7 +4,7 @@
   </ion-menu-toggle>
   <ion-grid [fixed]="false" class="">
     <ion-row>
-      <ion-col size="2">
+      <ion-col size="4">
         <ion-button (click)="nextClick()" expand="block" fill="clear" shape="round">
           Charger plus de demandes
         </ion-button>
@@ -16,7 +16,7 @@
       <ion-col size="6">Outillage</ion-col>
       <ion-col size="3">Date de la demande</ion-col>
       <ion-col size="3">Demandeur</ion-col>
-      <ion-col size="3" sort="">Date de besoin</ion-col>
+      <!-- <ion-col size="3" sort="">Date de besoin</ion-col> -->
     </ion-row>
     <ion-row appDataRow *ngFor="let request of toolRequests" (click)="openRequestClick(request)">
       <ion-col size="1" [style.border-left]="getBorder(request)">{{request.id}}</ion-col>
@@ -32,11 +32,11 @@
         <ion-label *ngIf="request.controle">{{request.controle.demandeur.username}}</ion-label>
         <ion-label *ngIf="request.maintenance">{{request.maintenance.demandeur.username}}</ion-label>
       </ion-col>
-      <ion-col size="3">
-        <ion-label *ngIf="request.controle"> {{request.controle.dateBesoin| date :"dd MMMM yyyy":"local"}}</ion-label>
+      <!-- <ion-col size="3"> -->
+      <!-- <ion-label *ngIf="request.controle"> {{request.controle.dateBesoin| date :"dd MMMM yyyy":"local"}}</ion-label>
         <ion-label *ngIf="request.maintenance"> {{request.maintenance.dateBesoin| date :"dd MMMM yyyy":"local"}}
-        </ion-label>
-      </ion-col>
+        </ion-label> -->
+      <!-- </ion-col> -->
     </ion-row>
   </ion-grid>
 </ng-container>
