--- a/src/app/tooling/components/tool-requests/tool-requests.page.html
+++ b/src/app/tooling/components/tool-requests/tool-requests.page.html
@@ -9,19 +9,19 @@
 
 </ion-header>
 <ion-content [fullscreen]="false" id="tool-request-content">
-  <!-- <ng-container *ngIf="toolRequests$ | async as toolRequests">
-    <app-table [datas]="toolRequests"></app-table>
-  </ng-container> -->
-  <ion-grid class="ion-no-padding">
-    <ion-row>
-      <ion-col size="2">
-        <app-tool-request-filters></app-tool-request-filters>
-      </ion-col>
-      <ion-col size="10">
-        <app-tool-request-table></app-tool-request-table>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <ng-container>
+    <!-- <app-table [datas]="toolRequests"></app-table> -->
+    <ion-grid class="ion-no-padding">
+      <ion-row>
+        <ion-col size="4">
+          <app-tool-request-filters></app-tool-request-filters>
+        </ion-col>
+        <ion-col size="6">
+          <app-tool-request-table></app-tool-request-table>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ng-container>
 
 
 </ion-content>
