tool requests list style github issue #

--- a/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-filters/tool-request-filters.component.html
+++ b/src/app/tooling/components/tool-requests/tool-requests-components/tool-request-filters/tool-request-filters.component.html
@@ -19,7 +19,7 @@
 
 <ion-toolbar>
   <ion-buttons slot="start">
-    <ion-button slot=end (click)="resetFiltersClick()">
+    <ion-button fill="solid" slot=end color="primary" slot=end (click)="resetFiltersClick()">
       Supprimer les filtres
     </ion-button>
   </ion-buttons>
