--- a/src/app/tooling/components/control3-d/control.page.html
+++ b/src/app/tooling/components/control3-d/control.page.html
@@ -326,6 +326,6 @@
 </ion-content>
 <ion-footer>
   <app-tool-request-footer (evStatusChange)="onChangeStatut($event)" (evSubmit)="submitControlForm()"
-    (evUpdate)="updateToolRequestForm()" [canManage]="canManage" [canUpdate]="canUpDate" [form]="controlForm">
+    (evUpdate)="updateToolRequestForm()" [canManage]="canManage" [canUpdate]="canUpDate">
   </app-tool-request-footer>
 </ion-footer>
