--- a/src/app/shared/components/user-popover/user-popover.component.html
+++ b/src/app/shared/components/user-popover/user-popover.component.html
@@ -1,22 +1,22 @@
 <!-- <ion-popover>
   <ng-template #name> -->
 <ion-list>
-  <ion-item button id="trigger-button" (click)="editProfilClick()">
+  <ion-item lines="full" button id="trigger-button" (click)="editProfilClick()">
     <ion-label>Profil</ion-label>
   </ion-item>
-  <ion-item>
+  <ion-item button lines="full">
     <ion-label>Préférences</ion-label>
     <ion-icon name="settings-outline" slot="start"></ion-icon>
   </ion-item>
-  <ion-item button (click)="navigate('admin')">
+  <ion-item lines="full" button (click)="navigate('admin')">
     <ion-label>Administration</ion-label>
     <ion-icon name="construct-outline" slot="start"></ion-icon>
   </ion-item>
-  <ion-item color="danger" class="ion-hide-sm-up" (click)="logoutClick()">
+  <ion-item lines="full" color="danger" class="ion-hide-sm-up" (click)="logoutClick()">
     <ion-icon slot="start" name="log-out-outline"></ion-icon>
     <ion-label>Déconnexion</ion-label>
   </ion-item>
-  <ion-item>
+  <ion-item lines="full">
     <ion-label>
       Version : {{version}}
     </ion-label>
