--- a/src/app/tooling/components/tool-input/tool-input.component.html
+++ b/src/app/tooling/components/tool-input/tool-input.component.html
@@ -1,8 +1,8 @@
 <ion-item>
   <ion-label>Outillage SAP : </ion-label>
   <ion-label *ngIf="tool"> {{(tool.sapToolNumber.length > 5) ? ' OT' : ' OT0'}}</ion-label>
-  <ion-input #toolNumber type="text" placeholder="n°OT SAP ou n° Equipement SAP"
-    (change)="toolOnChange(toolNumber.value.toString())" [value]="tool?.sapToolNumber"></ion-input>
+  <ion-input toolInput type="text" placeholder="n°OT SAP ou n° Equipement SAP" [value]="tool?.sapToolNumber">
+  </ion-input>
   <ion-spinner *ngIf="toolIsLoading" name="bubbles"></ion-spinner>
   <ion-icon *ngIf="tool" slot="end" name="checkmark" color=success></ion-icon>
 </ion-item>
