--- a/src/app/tooling/components/tool-requests/tool-requests.page.scss
+++ b/src/app/tooling/components/tool-requests/tool-requests.page.scss
@@ -2,5 +2,8 @@ ion-grid{
     height: 100%;
     ion-row{
         height: 100%;
+        ion-col:first-child{
+            border-right: 2px solid var(--ion-color-medium);
+        }
     }
 }
