control and maintenance refactoring V2

--- a/src/app/core/pages/register/register-form/register-form.component.html
+++ b/src/app/core/pages/register/register-form/register-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="registerForm">
-  <ion-grid fixed>
+  <ion-grid>
     <ion-row>
       <ion-col size="12">
         <ion-text color="medium">
