--- a/src/app/core/pages/register/role-form/role-form.component.html
+++ b/src/app/core/pages/register/role-form/role-form.component.html
@@ -1,16 +1,15 @@
 <form [formGroup]="registerForm">
-
   <ion-card>
     <ion-card-header>
       <ion-card-title color=primary>Role dans l'application</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <ion-list *ngIf="datas$ | async as data; else loading">
+      <ion-list *ngIf="datas$ | async as data; else loading" formGroupName="roleForm">
         <ion-item>
           <ion-label color=primary>Site
             <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-select required formControlName="site" placeholder="Selectionner un site">
+          <ion-select formControlName="site" placeholder="Selectionner un site">
             <ion-select-option *ngFor="let site of data[0]" [value]="site.id">
               {{site.nom}}
             </ion-select-option>
@@ -18,10 +17,10 @@
         </ion-item>
 
         <ion-item>
-          <ion-label color=primary>Unite
+          <ion-label color=primary>Secteur
             <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-select required formControlName="unite" placeholder="Selectionner une unité">
+          <ion-select formControlName="unite" placeholder="Selectionner une unité">
             <ion-select-option *ngFor="let unite of data[1]" [value]="unite.id">
               {{unite.nom}}
             </ion-select-option>
@@ -32,7 +31,7 @@
           <ion-label color=primary>Service
             <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-select required formControlName="service" placeholder="Sélectionner un service">
+          <ion-select formControlName="service" placeholder="Sélectionner un service">
             <ion-select-option *ngFor="let service of data[2]" [value]="service.id">
               {{service.nom}}
             </ion-select-option>
@@ -43,7 +42,7 @@
           <ion-label>Poste
             <ion-text color="danger">*</ion-text>
           </ion-label>
-          <ion-select required name="poste" formControlName="poste" placeholder="Sélectionner un poste">
+          <ion-select formControlName="poste" placeholder="Sélectionner un poste">
             <ion-select-option *ngFor="let role of data[3]" [value]="role.id">
               {{role.libelle}}
             </ion-select-option>
