--- a/src/app/tooling/components/control3-d/control.page.scss
+++ b/src/app/tooling/components/control3-d/control.page.scss
@@ -1,13 +1,13 @@
-.content-container {
-  display: flex;
-  height: 100%;
-  overflow: auto;
-  width: 100%;
-}
-.control-form {
-  width: 100%;
-  height: 100%;
-}
+// .content-container {
+//   display: flex;
+//   height: 100%;
+//   overflow: auto;
+//   width: 100%;
+// }
+// .control-form {
+//   width: 100%;
+//   height: 100%;
+// }
 .main-form {
   height: 100%;
   width: 100%;
