--- a/src/app/tooling/components/tool-request-footer/tool-request-footer.component.html
+++ b/src/app/tooling/components/tool-request-footer/tool-request-footer.component.html
@@ -17,6 +17,8 @@
             <ion-select-option value="EN COURS DE REALISATION">En cours de réalisation</ion-select-option>
             <ion-select-option value="TERMINEE">Terminée</ion-select-option>
             <ion-select-option value="CLOTUREE">Cloturer</ion-select-option>
+            <ion-select-option value="ATTENTE FOURNITURE EXT">Attente de fourniture extérieure</ion-select-option>
+            <ion-select-option value="DEM EXT">Demande externalisée</ion-select-option>
         </ion-select>
     </ion-item>
     <ion-button slot=end (click)="pdfExportClick()">
