--- a/src/app/core/pages/register/identity-form/identity-form.component.html
+++ b/src/app/core/pages/register/identity-form/identity-form.component.html
@@ -45,9 +45,9 @@
               <ion-label color=primary position="floating">Mot de passe
                 <ion-text color="danger">*</ion-text>
               </ion-label>
-              <ion-input required type="password" formControlName="password"
+              <ion-input type="password" formControlName="password"
                 pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)^[a-zA-Z\d]{6,12}$"></ion-input>
-              <ion-note>Le mot de passe doit faire entre 6 et 12 caractères. Il doit au moins contenir une
+              <ion-note slot="helper">Le mot de passe doit faire entre 6 et 12 caractères. Il doit au moins contenir une
                 majuscule, une minuscule et un chiffre</ion-note>
             </ion-item>
             <!-- **************************** -->
@@ -57,7 +57,7 @@
               <ion-label color=primary position="floating">Répéter mot de passe
                 <ion-text color="danger">*</ion-text>
               </ion-label>
-              <ion-input required formControlName="confirmPassword" type="password"></ion-input>
+              <ion-input formControlName="confirmPassword" type="password"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
