--- a/src/app/tooling/components/control3-d/control.page.html
+++ b/src/app/tooling/components/control3-d/control.page.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-toolbar color=dark>
+  <ion-toolbar color=dark no-padding>
     <ion-title>{{page.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content [fullscreen]="true" color=light>
+<ion-content color=light>
   <!-- TODO Revoir la mise en page scroll partie droite -->
   <div class="content-container">
     <div class="control-form">
@@ -11,13 +11,15 @@
       <!-- ******************************* -->
       <!-- **********   FORM   *********** -->
       <!-- ******************************* -->
-      <app-control3-dform></app-control3-dform>
+      <app-control3-dform [(controlForm)]="controlForm" [(toolRequestForm)]="toolRequestForm"></app-control3-dform>
     </div>
     <!-- <div class="print-preview">
       <app-controleddd [toolRequest]="toolRequest"></app-controleddd>
     </div> -->
   </div>
 </ion-content>
-<!-- <ion-footer>
-
-</ion-footer> -->
+<ion-footer>
+  <app-tool-request-footer (evStatusChange)="onChangeStatut($event)" (evSubmit)="submitControlForm()"
+    (evUpdate)="updateToolRequestForm()" [canManage]="requestState.canManage" [canUpdate]="requestState.canUpdate">
+  </app-tool-request-footer>
+</ion-footer>
