--- a/src/app/core/pages/login/login.page.html
+++ b/src/app/core/pages/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-content [fullscreen]="true">
-  <app-login-form></app-login-form>
+  <app-login-form />
 
   <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button size="small" color="light" (click)="showNotice()">
