routing amélioré toolpage fonctionnelle

--- a/src/app/tooling/components/tool-request-menu/tool-request-menu.component.html
+++ b/src/app/tooling/components/tool-request-menu/tool-request-menu.component.html
@@ -17,7 +17,7 @@
 
 
       <ion-menu-toggle auto-hide="true">
-        <ion-item [disabled]="true" button routerDirection="forward" [routerLink]="'new-tool'"
+        <ion-item [disabled]="false" button routerDirection="forward" [routerLink]="'new-tool'"
           [style.boder-right]="'solid 4px yellow'">
           <ion-label>
             Nouvel outillage (SBO)
